Clear backingstore for windows with alpha channel.

Fixes painting artifacts in translucent windows.

Change-Id: I89c198e5636c5387e67ad8839d32dffdc0a149cb
Task-number: QTBUG-43017
Reviewed-by: Gunnar Sletta <gunnar@sletta.org>
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>